--- a/Web_Project/.settings/org.eclipse.core.resources.prefs
+++ b/Web_Project/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/Check.jsp=UTF-8
 encoding//src/main/webapp/DetailProduct.jsp=UTF-8
+encoding//src/main/webapp/admin/AdminDashBoard.jsp=UTF-8
 encoding/<project>=UTF-8
