Add CRUD function to Admin User manager

--- a/Web_Project/src/main/webapp/WEB-INF/authentication.properties
+++ b/Web_Project/src/main/webapp/WEB-INF/authentication.properties
@@ -16,4 +16,16 @@ applydiscount=CART
 Thank.jsp=CART
 
 # URL admin yêu cầu quyền quản trị
-dashboard=ADMIN
+admindashboard=ADMIN
+adminmanageruser=ADMIN
+edituser=ADMIN
+adminmanagercategory=ADMIN
+deletecategory=ADMIN
+editcategory=ADMIN
+admindiscount=ADMIN
+adddiscount=ADMIN
+updatediscount=ADMIN
+editdiscount=ADMIN
+deletediscount=ADMIN
+adminmanagerproduct=ADMIN
+adminmanagerorder=ADMIN
