--- a/Web_Project/src/main/webapp/WEB-INF/web.xml
+++ b/Web_Project/src/main/webapp/WEB-INF/web.xml
@@ -19,4 +19,10 @@
   <session-config>
   	<session-timeout>30</session-timeout>
   </session-config>
+  
+  <!-- Cấu hình trang lỗi -->
+  <error-page>
+  	<error-code>403</error-code>
+  	<location>/error/error403.jsp</location>
+  </error-page>
 </web-app>
