--- a/Web_Project/src/main/webapp/WEB-INF/authentication.properties
+++ b/Web_Project/src/main/webapp/WEB-INF/authentication.properties
@@ -19,7 +19,7 @@ Thank.jsp=CART
 admindashboard=ADMIN
 adminmanageruser=ADMIN
 edituser=ADMIN
-adminmanagercategory=ADMIN
+adminCategoryManager=ADMIN
 deletecategory=ADMIN
 editcategory=ADMIN
 admindiscount=ADMIN
@@ -28,4 +28,14 @@ updatediscount=ADMIN
 editdiscount=ADMIN
 deletediscount=ADMIN
 adminmanagerproduct=ADMIN
+deleteproduct=ADMIN
+addproduct1=ADMIN
+addproduct2=ADMIN
+editproduct1=ADMIN
+editproduct2=ADMIN
+editproduct3=ADMIN
+uploadfile=ADMIN
 adminmanagerorder=ADMIN
+cancelorder=ADMIN
+confirmorder=ADMIN
+orderdetails=ADMIN
